# nexmark

./: meson.build  nexmark.in  startnexmark  startnexmark.in
NOTES/: epub.md
data/: io.mspencer.Nexmark.gschema.xml  meson.build  nexmark.gresource.xml  stylesheet.css
meson/: meson-postinstall.sh
nexmark/: __init__.py  application.py  drawing.py  utils.py  window.py
nexmark/providers/: upower.py
nexmark/providers/books/: __init__.py  calibre.py  common.py  cover.py
nexmark/screens/: __init__.py
nexmark/screens/home/: __init__.py  books.py  screen.py
nexmark/screens/reader/: __init__.py  epub.py  evince.py  screen.py
nexmark/screens/settings/: __init__.py  window.py
nexmark/widgets/: __init__.py  stacked.py
scripts/: qrc.py
src/: app.qrc  book.cpp  book.h  booksmanager.cpp  booksmanager.h  epubfile.cpp  epubfile.h  main.cpp
src/qml/: DateTime.qml  Main.qml  Object.qml  Theme.qml  Window.qml  qmldir  utils.js
src/qml/components/: BookCover.qml  BoxShadow.qml  Elevation.qml  Header.qml  Label.qml  Scrollbar.qml  Subheader.qml
src/qml/home/: BookItem.qml  HomeScreen.qml  ListSection.qml
src/qml/reader/: ReaderWindow.qml
